[package]
name = "codecharacter-driver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_driver"
path = "src/lib.rs"

[dependencies]
log = "0.4"
log4rs = "1.2.0"
nix = "0.26.0"
amiquip = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.9"
fs_extra = "1.3.0"
